Соптимизировал пару мегабайтов, вырезав sqlite из кода

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,7 @@ set(BUILD_EXAMPLES OFF)
 set(BUILD_CTL OFF)
 set(BUILD_ORM ON)
 set(BUILD_POSTGRESQL ON)
+set(BUILD_SQLITE OFF)
 set(BUILD_BROTLI OFF)
 set(BUILD_YAML_CONFIG OFF)
 set(WITH_ZLIB OFF)
