Сократил мусор до минимума

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,15 +16,17 @@ if(CCACHE_PROGRAM)
 endif()
 
 set(CMAKE_CXX_FLAGS_DEBUG "-O0 -g")
-set(CMAKE_CXX_FLAGS_RELEASE "-O3 -DNDEBUG")
-set(CMAKE_CXX_FLAGS_NATIVE "-O3 -DNDEBUG -march=native")
+set(CMAKE_CXX_FLAGS_RELEASE "-O3 -s -DNDEBUG")
 
 
 set(BUILD_EXAMPLES OFF)
 set(BUILD_CTL OFF)
+
 set(BUILD_ORM ON)
 set(BUILD_POSTGRESQL ON)
+set(BUILD_MYSQL OFF)
 set(BUILD_SQLITE OFF)
+
 set(BUILD_BROTLI OFF)
 set(BUILD_YAML_CONFIG OFF)
 set(WITH_ZLIB OFF)
