Сделана функция хеширования для refreshToken-а с помощью sha2-256, #11

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,9 +33,10 @@ set(WITH_ZLIB OFF)
 
 add_subdirectory(libs/drogon)
 
-
 set(JWT_BUILD_EXAMPLES OFF)
 add_subdirectory(libs/jwt-cpp)
+
+find_package(OpenSSL REQUIRED)
 
 # Добавляем include/ как include
 include_directories(${PROJECT_SOURCE_DIR}/include)
@@ -45,6 +46,6 @@ file(GLOB_RECURSE SOURCES "src/*.cpp")
 
 add_executable(svc-auth ${SOURCES})
 
-target_include_directories(svc-auth PRIVATE)
+target_include_directories(svc-auth PRIVATE ${OPENSSL_INCLUDE_DIR})
 target_compile_options(svc-auth PRIVATE -Wall -Wextra -Wpedantic)
-target_link_libraries(svc-auth PRIVATE drogon argon2 jwt-cpp)
+target_link_libraries(svc-auth PRIVATE drogon argon2 jwt-cpp ${OPENSSL_LIBRARIES})
